2005-06-16  James A. Morrison  <phython@gcc.gnu.org>

	PR testsuite/22056
	* gcc.dg/pr14796-2.c: Accept -34359738368 and -800000000.

2005-06-17  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/19216
	* gfortran.dg/pr19216.f: Add correct space between brackets and
	dg directive.

2005-06-17  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/16436
	* gfortran.dg/g77/f77-edit-t-in.f: Not XFAIL-ed any more.

2005-06-16  Richard Guenther  <rguenth@gcc.gnu.org>

	* gcc.target/i386/attributes-error.c: New testcase.
	* gcc.target/i386/fastcall-sseregparm.c: Likewise.
	* gcc.target/i386/regparm-stdcall.c: Likewise.
	* gcc.target/i386/sseregparm-1.c: Likewise.
	* gcc.target/i386/sseregparm-2.c: Likewise.

2005-06-16  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.dg/rtti/crash2.C: New.

2005-06-15  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/noncompile/20040203-3.c: Update expected message.

2005-06-15  David Ung  <davidu@mips.com>

	* gcc.target/mips/mips16e-extends.c: New test for testing the
	generation of MIPS16e zeb/zeh, seb/seh instructions.

2005-06-15  Diego Novillo  <dnovillo@redhat.com>

	PR 22018
	* gcc.dg/tree-ssa/vrp13.c: Add multiplication tests.
	* gcc.dg/tree-ssa/pr22018.c: New test.

2005-06-15  Aldy Hernandez  <aldyh@redhat.com>

	* gcc.dg/simd-1.c: Update error messages.
	* gcc.dg/simd-1b.c: Re-enable tests.  Update error messages.
	* gcc.dg/simd-2.c: Update error messages.
	* gcc.dg/simd-4.c: New.

2005-06-15  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20678
	* g++.dg/other/crash-4.C: New.

2005-06-14  Devang Patel  <dpatel@apple.com>

	* gcc.dg/vect/vect-ifcvt-1.c: Remove.
	
2005-06-14  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/21929
	* g++.dg/parse/crash11.C: Update

2005-06-13  Jeff Law  <law@redhat.com>

	* gcc.dg/tree-ssa/20030807-10.c: VRP is now expected to
	perform the desired transformations.
	* gcc.dg/tree-ssa/20030806-6.c: Similarly.
	* gcc.dg/tree-ssa/20040514-2.c: Similarly.
