@@ -2,6 +2,7 @@
 
 #include <stdarg.h>
 #include <signal.h>
+#include "tree-vect.h"
 
 #define N 16
 #define MAX 42
@@ -13,6 +14,8 @@ int main ()
   int A[N] = {36,39,42,45,43,32,21,12,23,34,45,56,67,78,89,11};
   int B[N] = {0,0,0,42,42,0,0,0,0,0,42,42,42,42,42,0};
   int i, j;
+
+  check_vect ();
 
   for (i = 0; i < 16; i++)
     A[i] = ( A[i] > MAX ? MAX : 0); 
