@@ -2,6 +2,7 @@
 
 #include <stdarg.h>
 #include <signal.h>
+#include "tree-vect.h"
 
 #define N 16
 #define MAX 42
@@ -23,6 +24,7 @@ int main ()
 {
 
   int i, j;
+  check_vect ();
   foo ();
   /* check results:  */
   for (i = 0; i < N; i++)
